2008-06-16  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: If the faillog file exist, warn in case of
	failure when open(), lssek(), write() or close() fails when the
	new user's faillog entry is reset.
	* src/useradd.c: Ditto for the lastlog entry.

2008-06-15  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/limits.c: Add brackets and parenthesis.
	* libmisc/limits.c: Avoid implicit conversion of pointers /
	integers to booleans.
	* libmisc/limits.c: Ignore the return value of umask(). We will
	never return to the original umask.
	* libmisc/limits.c: Avoid multi-statements lines.
	* libmisc/limits.c: Added default to a switch(). Report invalid
	limit strings to syslog.
	* libmisc/limits.c: Ignore the return value of fclose().
	/etc/limits is open read-only.
	* libmisc/limits.c: Ignore the return value of fputs() and
	sleep().
	* libmisc/limits.c: Check the return value of nice() and
	set_filesize_limit(), and report errors to syslog.

2008-06-15  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/ulimit.c, lib/prototypes.h: Return failures of
	set_filesize_limit(). Change the prototype to return an int
	instead of void.

2008-06-15  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/failure.c: Try to close the open file if a failure
	occured during lseek(), read() or write().

2008-06-15  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/log.c: Check return values. If lseek() failed, avoid
	reading or writing at an unspecified location. Log to syslog in
	case of failure.
	* libmisc/log.c: Use the right casts.

2008-06-15  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/find_new_ids.c, libmisc/find_new_gid.c,
	libmisc/find_new_uid.c, libmisc/Makefile.am, lib/prototypes.h:
	Split find_new_ids.c into find_new_gid.c and find_new_uid.c to
	ease the description of login.defs variables in the different
	tools.
